--- a/index.html
+++ b/index.html
@@ -1,23 +1,111 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>BS-DUMMY-APP</title>
-    <link rel="stylesheet" href="node_modules\bootstrap\dist\css\bootstrap.css">
-    <link rel="stylesheet" href="style.css">
-</head>
-<body>
-    <!-- Navbar section -->
-    <section>
-        <div class="container navbar navbar-inverse">
 
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta http-equiv="X-UA-Compatible" content="ie=edge">
+  <title>BS-DUMMY-APP</title>
+  <link rel="stylesheet" href="node_modules\bootstrap\dist\css\bootstrap.css">
+  <link rel="stylesheet" href="style.css">
+</head>
+
+<body>
+  <!-- Landing Page -->
+  <section>
+    <!-- Header -->
+    <header>
+      <div class="jumbotron text-center" style="height:100vh">
+        <div class="container">
+          <h1>Hello Good Morning!</h1>
+          <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Eveniet perferendis non dolorum iure veritatis voluptatum
+            distinctio. Magnam magni laboriosam doloribus sit dicta cum quaerat iste alias perspiciatis libero, deserunt
+            quam?
+          </p>
+          <div class="container">
+            <h1>Today's Quote</h1>
+            <blockquote>
+              <p>For 50 years, WWF has been protecting the future of nature. The world's leading conservation organization,
+                WWF works in 100 countries and is supported by 1.2 million members in the United States and close to 5 million
+                globally.
+              </p>
+              <footer>From WWF's website</footer>
+            </blockquote>
+          </div>
+          <a href="#login" class="btn btn-primary">
+            ENTER
+          </a>
         </div>
-    </section>
-    <section></section>
-    <section></section>
-    <section></section>
-    <section></section>
+      </div>
+    </header>
+  </section>
+  <!-- Navbar section -->
+  <section>
+    <nav class="navbar navbar-inverse navbar-static-top">
+      <!-- /.container-fluid -->
+      <div class="container-fluid">
+        <div class="navbar-header">
+          <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#myNavbar">
+            <span class="icon-bar"></span>
+            <span class="icon-bar"></span>
+            <span class="icon-bar"></span>
+          </button>
+          <a class="navbar-brand" href="#">Bootstrap CheatSheet</a>
+        </div>
+        <div class="collapse navbar-collapse" id="myNavbar">
+          <ul class="nav navbar-nav nav-pills navbar-center">
+            <li>
+              <a href="#">Home</a>
+            </li>
+            <li>
+              <a href="#">About</a>
+            </li>
+            <li>
+              <a href="#">Projects</a>
+            </li>
+            <li>
+              <a href="#">Contact</a>
+            </li>
+
+          </ul>
+          <ul class="nav navbar-nav navbar-right">
+            <li>
+              <form class="navbar-form navbar-left">
+                <div class="input-group">
+                  <input type="text" class="form-control" placeholder="Search">
+                  <div class="input-group-btn">
+                    <button class="btn btn-default" type="submit">
+                      <i class="glyphicon glyphicon-search"></i>
+                    </button>
+                  </div>
+                </div>
+              </form>
+            </li>
+            <li>
+              <a href="#">
+                <span class="glyphicon glyphicon-log-in"></span> Login</a>
+            </li>
+          </ul>
+        </div>
+      </div>
+    </nav>
+
+  </section>
+  <section>
+    <div class="coontainer">
+      <div class="row text-center ">
+
+        Lorem, ipsum dolor sit amet consectetur adipisicing elit. Eveniet perferendis non dolorum iure veritatis voluptatum distinctio.
+        Magnam magni laboriosam doloribus sit dicta cum quaerat iste alias perspiciatis libero, deserunt quam?
+      </div>
+    </div>
+  </section>
+  <section>
+
+  </section>
+
+  <section></section>
+  <section></section>
 </body>
+
 </html>
